# neurlink

./: .gitignore  LICENCE  README.md  setup.cfg
src/neurlink/: __init__.py
src/neurlink/models/: __init__.py  _builder.py  hrnet.py  resnet.py  resnet_bak.py
src/neurlink/nerves/: __init__.py  common_types.py  conv.py  misc.py  nerve.py  pool.py  utils.py
src/neurlink/nn/: __init__.py
src/neurlink/nn/functional/: regularization.py
src/neurlink/nn/modules/: __init__.py  conv.py  regularization.py
tests/: draft.py  test_build_models.py  test_python.py
tests/models/: test_resnet.py
tests/nerves/: test_conv.py  test_nerve.py
