[metadata]
name = neurlink
version = 0.2.0
author = Yuyao Huang
author_email = huangyuyao@outlook.com
description = a compact neuron network model definition grammar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tjyuyao/neurlink
project_urls =
    Bug Tracker = https://github.com/tjyuyao/neurlink/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src